--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -376,14 +376,22 @@
 
 </div>
 <div class="row">
+        <div style="margin-top:20px;margin-bottom:10px; margin-right:10%;">
+		<input type="button" id="upload" value="上传附件"
+                        style="width: 80px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
+                        class="btn btn-minier btn-primary">
+        </div>
+        <div style="margin-top:20px;margin-bottom:10px; margin-right:10%;" id="files"></div>
+</div>
+<div class="row">
         <span style="float:right;margin-top:20px;margin-bottom:10px; margin-right:1%;">
             <button class="btn btn-info" type="button"
-                    onclick="subTableInfos(false);">
+                    onclick="subTableInfos(false, false);">
                 <i class="icon-arrow-up bigger-110"></i>
                 暂存
             </button>
             <button class="btn btn-info" type="button"
-                    onclick="subTableInfos(true);">
+                    onclick="subTableInfos(true, false);">
                 <i class="icon-arrow-right bigger-110"></i>
                 保存并提交
             </button>
@@ -402,10 +410,16 @@
         var url = location.search;
         if (formId != "") {
             createEditApplyTable(formId);
-            
         } else {
             createNewAddApplyTable();
         }
+        
+		$("#upload").unbind("click");
+        $("#upload").on("click", function (e) {
+        	showUploadDialog();
+		}).on("dblclick", function (e) {
+			e.preventDefault();
+        });
 
     });
 
@@ -473,7 +487,9 @@
                     var data = resp.data;
                     var tableMap = data.tableMap;
                     var vars = data.vars;
+                    var files = data.files;
                     getDataToEditDialog(tableMap, vars);
+                    getDataToFiles(files);
 					if(taskId != ""){
 		            	$("input[name='Fruit']").attr('disabled', 'true');
 			            if($("#sum4").val() <= 0){
@@ -571,6 +587,7 @@
 			$("#loan_"+tableInfo[j][0]).val(tableInfo[j][4]);
 		}
     }
+    
     function getDataToEditDialog(tableMap, vars) {
 
         constructTable0Info(tableMap);
@@ -589,6 +606,17 @@
         $("#remark").val(vars["remark"]);
 		$("#payAmount").val(vars["payAmount"]);
 		$("#borrowAmount").val(vars["borrowAmount"]);
+    }
+    
+    function getDataToFiles(files) {
+        for(var i = 0; i < files.length; i++){
+        	var file = files[i];
+        	var name = file['fileName'];
+        	var owner = file['owner'];
+        	var ts = file['ts'];
+        	var id = file['id'];
+        	$("#files").append('<div id="file_'+id+'"><b><a href="oa/download_file?fileId='+id+'">'+name+'</a></b> <a href="javascript:void(0)" onclick="removeFile('+id+')">[删除]</a></div>');
+        }
     }
 
     function workHour(tableId, curRow) {
@@ -823,141 +851,7 @@
         }
     }
 
-    function subTableInfos(flag) {
-        var params = {};
-        var vars = {};
-        if(formId != null && formId != ""){
-        	vars["formId"] = formId;
-        }
-        for (var i = 1; i < 7; i++) {
-            vars["sum" + i] = $("#sum" + i).val();
-        }
-        for (var i = 1; i < 7; i++) {
-            vars["ratify" + i] = $("#ratify" + i).val();
-        }
-        vars["sum"] = $("#sum").val();
-        vars["ratify"] = $("#ratify").val();
-        vars["remark"] = $("#remark").val();
-        vars["payAmount"] = $("#payAmount").val();
-        var tableMap = {};
-        var tableList = ["table1", "table2", "table3", "table4", "table5"];
-        var len = tableList.length;
-        for (i = 0; i < len; i++) {
-            var tableId = tableList[i];
-            var table = document.getElementById(tableId);
-            var rowLen = table.rows.length;
-            var coLen = table.rows[0].cells.length;
-            var list = new Array();
-            for (var j = 1; j < rowLen; j++) {
-                list[j - 1] = new Array();
-                for (var k = 0; k < coLen - 1; k++) {
-                    list[j - 1][k] = table.rows[j].cells[k].childNodes[0].value;
-                    if (tableId != "table5" && k == 0) {
-                         _data = table.rows[j].cells[k].childNodes[0].childNodes[1].value;
-                         list[j - 1][k] = _data;
-                    }
-                    if (isNull(list[j - 1][k])) {
-                        list[j - 1][k] = "";
-                    }
-                }
-            }
-            tableMap[tableId] = list;
-        }
-        //table 基本信息
-        table = document.getElementById("table");
-        list = new Array();
-        list[0] = new Array();
-        k = 0;
-        for (i = 0; i < 3; i++) {
-            for (j = 1; j < 6; j += 2) {
-                if ((i == 2) && j == 1) {
-                    var input = table.rows[i].cells[j].childNodes;
-                    var input1 = input[0];
-                    var input2 = input[2];
-                    if (input1.checked) {
-                        list[0][k] = input1.value;
-                    } else if (input2.checked) {
-                        list[0][k] = input2.value;
-                    }
-                } else {
-                    list[0][k] = table.rows[i].cells[j].childNodes[0].value;
-                }
-                if (isNull(list[0][k])) {
-                    list[0][k] = "";
-                }
-                k++;
-            }
-        }
-        tableMap["table"] = list;
-        
-        //table 借款信息
-        table = document.getElementById("table7");
-        list = new Array();
-        list[0] = new Array();
-        var rowLen = table.rows.length;
-        k = 0;
-        priceSum = 0;
-        for (i = 1; i < rowLen; i++) {
-            var billNo = table.rows[i].cells[0].childNodes[0].value;
-            var invoiceDate = table.rows[i].cells[1].childNodes[0].value;
-            var amount = table.rows[i].cells[2].childNodes[0].value;
-            var borrowBillBalance = table.rows[i].cells[3].childNodes[0].value;
-            var price = table.rows[i].cells[4].childNodes[0].value;
-            if(price == "") price = "0.00";
-            if (!(/^(([1-9]\d*)|\d)(\.\d{1,2})?$/).test(price)) {
-				showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg("冲销金额格式错误"), 300);
-				return false;
-			}
-			borrowBillBalance = parseFloat(borrowBillBalance);
-			price = parseFloat(price);
-			priceSum += price;
-			if (price > borrowBillBalance) {
-				showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg("冲销金额不能大于借款余额"), 300);
-				return false;
-			}
-            list[0][k] = billNo+","+invoiceDate+","+amount+","+borrowBillBalance+","+price;
-            k++;
-        }
-        tableMap["table7"] = list;
-        
-        params["vars"] = vars;
-        params["tableMap"] = tableMap;
-        params["flag"] = flag;
-        $.ajax({
-            contentType: "application/json; charset=utf-8",
-            url: "oa/data",
-            type: "POST",
-            data: JSON.stringify(params),
-            success: function (resp) {
-                if (resp.errorCode == 0) {
-                	if(flag && taskId != null && taskId != ""){
-                		//approveProxy("oa/approve_endorse");
-                		approveEndorse();
-                	}else if(flag){
-                    	showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("创建报销申请成功！"), 300);
-                    	window.location.href = '/oaengine/oa/apply_todo.html';
-                    }else{
-                    	if(taskId != null && taskId != ""){
-                    		showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("保存成功！"), 300);
-	                    	window.location.href = '/oaengine/oa/approve_todo.html';   
-                    	}else{
-	                        showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("草稿保存成功！"), 300);
-	                    	window.location.href = '/oaengine/oa/draft.html';    
-                    	}           
-                    }
-                } else {
-                    showCommonNoticeDialog('失败', 'icon-warning-sign',
-                            generateNoticeMsg(resp.errorMessage), 300);
-                }
-            },
-            error: function (jqXHR, textStatus, errorThrown) {
-                showCommonNoticeDialog('网络错误', 'icon-bolt',
-                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
-            }
-        })
-    }
-    
-     function approveEndorse() {
+    function approveEndorse() {
         var url = "oa/approve_endorse";
         var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
         try {
@@ -1150,6 +1044,261 @@
                 showCommonNoticeDialog('网络错误', 'icon-bolt', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
             }
         });
-    	
     }
+    
+    
+    function subTableInfos(flag, uploadFile) {
+        var params = {};
+        var vars = {};
+        if(formId != null && formId != ""){
+        	vars["formId"] = formId;
+        }
+        for (var i = 1; i < 7; i++) {
+            vars["sum" + i] = $("#sum" + i).val();
+        }
+        for (var i = 1; i < 7; i++) {
+            vars["ratify" + i] = $("#ratify" + i).val();
+        }
+        vars["sum"] = $("#sum").val();
+        vars["ratify"] = $("#ratify").val();
+        vars["remark"] = $("#remark").val();
+        vars["payAmount"] = $("#payAmount").val();
+        var tableMap = {};
+        var tableList = ["table1", "table2", "table3", "table4", "table5"];
+        var len = tableList.length;
+        for (i = 0; i < len; i++) {
+            var tableId = tableList[i];
+            var table = document.getElementById(tableId);
+            var rowLen = table.rows.length;
+            var coLen = table.rows[0].cells.length;
+            var list = new Array();
+            for (var j = 1; j < rowLen; j++) {
+                list[j - 1] = new Array();
+                for (var k = 0; k < coLen - 1; k++) {
+                    list[j - 1][k] = table.rows[j].cells[k].childNodes[0].value;
+                    if (tableId != "table5" && k == 0) {
+                         _data = table.rows[j].cells[k].childNodes[0].childNodes[1].value;
+                         list[j - 1][k] = _data;
+                    }
+                    if (isNull(list[j - 1][k])) {
+                        list[j - 1][k] = "";
+                    }
+                }
+            }
+            tableMap[tableId] = list;
+        }
+        //table 基本信息
+        table = document.getElementById("table");
+        list = new Array();
+        list[0] = new Array();
+        k = 0;
+        for (i = 0; i < 3; i++) {
+            for (j = 1; j < 6; j += 2) {
+                if ((i == 2) && j == 1) {
+                    var input = table.rows[i].cells[j].childNodes;
+                    var input1 = input[0];
+                    var input2 = input[2];
+                    if (input1.checked) {
+                        list[0][k] = input1.value;
+                    } else if (input2.checked) {
+                        list[0][k] = input2.value;
+                    }
+                } else {
+                    list[0][k] = table.rows[i].cells[j].childNodes[0].value;
+                }
+                if (isNull(list[0][k])) {
+                    list[0][k] = "";
+                }
+                k++;
+            }
+        }
+        tableMap["table"] = list;
+        
+        //table 借款信息
+        table = document.getElementById("table7");
+        list = new Array();
+        list[0] = new Array();
+        var rowLen = table.rows.length;
+        k = 0;
+        priceSum = 0;
+        for (i = 1; i < rowLen; i++) {
+            var billNo = table.rows[i].cells[0].childNodes[0].value;
+            var invoiceDate = table.rows[i].cells[1].childNodes[0].value;
+            var amount = table.rows[i].cells[2].childNodes[0].value;
+            var borrowBillBalance = table.rows[i].cells[3].childNodes[0].value;
+            var price = table.rows[i].cells[4].childNodes[0].value;
+            if(price == "") price = "0.00";
+            if (!(/^(([1-9]\d*)|\d)(\.\d{1,2})?$/).test(price)) {
+				showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg("冲销金额格式错误"), 300);
+				return false;
+			}
+			borrowBillBalance = parseFloat(borrowBillBalance);
+			price = parseFloat(price);
+			priceSum += price;
+			if (price > borrowBillBalance) {
+				showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg("冲销金额不能大于借款余额"), 300);
+				return false;
+			}
+            list[0][k] = billNo+","+invoiceDate+","+amount+","+borrowBillBalance+","+price;
+            k++;
+        }
+        tableMap["table7"] = list;
+        
+        params["vars"] = vars;
+        params["tableMap"] = tableMap;
+        params["flag"] = flag;
+        $.ajax({
+            contentType: "application/json; charset=utf-8",
+            url: "oa/data",
+            type: "POST",
+            data: JSON.stringify(params),
+            success: function (resp) {
+                if (resp.errorCode == 0) {
+                    if(uploadFile){
+                    	formId = resp.data;
+                    	fileData.append('formId', formId);
+                    	$.ajax({
+	                        url: 'oa/upload_file',
+	                        contentType: false,
+	                        data: fileData,
+	                        processData: false,
+	                        type: 'POST',
+	                        success: function (resp) {
+	                            var data = resp || {};
+	                            if (data.errorCode == 0) {
+	                            	$("#approve-msg-dialog").dialog("close");
+	                            	fn = data.data.fileName;
+		                            fid = data.data.id;
+		                            $("#files").append('<div id="file_'+fid+'"><b><a href="oa/download_file?fileId='+fid+'">'+fn+'</a></b> <a href="javascript:void(0)" onclick="removeFile('+fid+')">[删除]</a></div>');
+	                            }else{
+	                            	var msg_dom = '<div style="color: red">'
+	                                        + $.parseStr('<p>%s</p>', data.errorMessage || '')
+	                                        + '</div>';
+	                                    $("#upload_configure_msg").html(msg_dom);
+	                            }
+	                        },
+	                        error: function () {
+	                            $("#upload_configure_msg").html('<div style="color: red"><p>网络错误</p></div>');
+	                        }
+	                    });
+                    }else{
+	                	if(flag && taskId != null && taskId != ""){
+	                		approveEndorse();
+	                	}else if(flag){
+	                    	showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("创建报销申请成功！"), 300);
+	                    	window.location.href = '/oaengine/oa/apply_todo.html';
+	                    }else{
+	                    	if(taskId != null && taskId != ""){
+	                    		showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("保存成功！"), 300);
+		                    	window.location.href = '/oaengine/oa/approve_todo.html';   
+	                    	}else{
+		                        showCommonNoticeDialog('成功', 'icon-warning-sign', generateNoticeMsg("草稿保存成功！"), 300);
+		                    	window.location.href = '/oaengine/oa/draft.html';    
+	                    	}           
+	                    }
+                    }
+                } else {
+                    showCommonNoticeDialog('失败', 'icon-warning-sign', generateNoticeMsg(resp.errorMessage), 300);
+                }
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                showCommonNoticeDialog('网络错误', 'icon-bolt', generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+            }
+        })
+    }
+    
+    var fileData = new FormData()
+	function showUploadDialog() {
+	    var form = '<div style="padding: 10px 0px">'
+	        + '<form id="upload_configure_form">'
+	        + '<input type="file" name="file"/>'
+	        + '</form>'
+	        + $.parseStr(
+	            '<div id="upload_configure_msg" style="%s"></div>',
+	            'width: 100%; line-height: 18px; font-size: 14px; font-weight: bold; padding: 15px 5px 5px 5px'
+	        );
+	    $("#approve-msg-dialog").html(form);
+	    title_html_str = '<div class="dialog_title">上传附件</div>'
+	    var dialog = $("#approve-msg-dialog").removeClass('hide').dialog({
+	        modal: true,
+	        width: 450,
+	        resizable: false,
+	        title: title_html_str,
+	        title_html: true,
+	        buttons: [
+	            {
+	                text: "确认上传",
+	                "class": "btn btn-danger btn-xs",
+	                click: function () {
+	                    fileData = new FormData();
+	                    fileData.append('file', $('#upload_configure_form input[name=file]').get(0).files[0]);
+	                    if(formId == ''){
+	                    	subTableInfos(false, true);
+	                    }else{
+	                    	fileData.append('formId', formId);
+		                    $.ajax({
+		                        url: 'oa/upload_file',
+		                        contentType: false,
+		                        data: fileData,
+		                        processData: false,
+		                        type: 'POST',
+		                        success: function (resp) {
+		                            var data = resp || {};
+		                            if (data.errorCode == 0) {
+		                            	$("#approve-msg-dialog").dialog("close");
+		                            	fn = data.data.fileName;
+		                            	fid = data.data.id;
+		                            	$("#files").append('<div id="file_'+fid+'"><b><a href="oa/download_file?fileId='+fid+'">'+fn+'</a></b> <a href="javascript:void(0)" onclick="removeFile('+fid+')">[删除]</a></div>');
+		                            }else{
+		                            	var msg_dom = '<div style="color: red">'
+		                                        + $.parseStr('<p>%s</p>', data.errorMessage || '')
+		                                        + '</div>';
+		                                    $("#upload_configure_msg").html(msg_dom);
+		                            }
+		                        },
+		                        error: function () {
+		                            $("#upload_configure_msg").html('<div style="color: red"><p>网络错误</p></div>');
+		                        }
+		                    });
+						}
+	                }
+	            },
+	            {
+	                text: "取消",
+	                "class": "btn btn-xs",
+	                click: function () {
+	                    $("#approve-msg-dialog").dialog("close");
+	                }
+	            }
+	        ],
+	        close: function () {
+	            $("#approve-msg-dialog").empty()
+	            $("#approve-msg-dialog").dialog('destroy')
+	        }
+	    });
+	}
+	
+	function removeFile(id) {
+		var formData = new FormData();
+		formData.append('fileId', id);
+		$.ajax({
+			url: 'oa/remove_file',
+			contentType: false,
+			data: formData,
+			processData: false,
+			type: 'POST',
+			success: function (data) {
+					if (data.errorCode == 0) {
+						 $("#file_"+id).remove();
+		            }else{
+						showCommonNoticeDialog('删除文件错误', 'icon-warning-sign', generateNoticeMsg(data.errorMessage), 300);
+                        return;
+		            }
+				},
+			error: function () {
+				showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+			}
+		});
+	}
 </script>
