--- a/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
@@ -42,6 +42,10 @@
                     onclick="approveEndorse();">
                	 加签
             </button>
+            <button class="btn btn-info" type="button"
+                    onclick="approveBack();">
+               	 退回
+            </button>
         </span>
     </div>
 </div>
@@ -1147,6 +1151,74 @@
         }
     }
     
+    function approveBack() {
+        var url = "oa/approve_back";
+        var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
+        try {
+            $("#endorse-msg-dialog").empty();
+            $("#endorse-msg-dialog").append(createBackMsgForm('Tips: 请输入回退理由'));
+            var dialog = $("#endorse-msg-dialog").removeClass('hide').dialog({
+                modal: true,
+                width: dialog_width,
+                height: 300,
+                title: '<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold"><li class="icon-user"></li> 回退理由</div>',
+                title_html: true,
+                closeOnEscape: false,
+                open: function (event, ui) {
+                    $(".ui-dialog-titlebar-close").hide();
+                },
+                buttons: [
+                    {
+                        id: "back-msg-submit",
+                        text: "提交",
+                        "class": "btn btn-primary btn-xs",
+                        click: function (e) {
+                            var Me = this;
+                            try {
+                                var this_form = $("#endorse-msg-dialog").find("form");
+                                var postData = this_form.serializeArray();
+                                var msg = "";
+                                for (var i in postData) {
+                                    if (postData[i]['name'] == 'msg') {
+                                        if (postData[i]['value'].length >= 100) {
+                                            showCommonNoticeDialog('回退错误', 'icon-warning-sign',
+                                                    generateNoticeMsg('回退理由不能超过100个字符'), 300);
+                                            return;
+                                        } else if (postData[i]['value'].length == 0) {
+                                            showCommonNoticeDialog('回退错误', 'icon-warning-sign',
+                                                    generateNoticeMsg('回退理由不能为空'), 300);
+                                            return;
+                                        } else {
+                                            msg = postData[i]['value'];
+                                            break;
+                                        }
+                                    }
+                                }
+                                approveProxy(url, msg, "回退");
+                                e.preventDefault(); //STOP default action
+                                $(this).dialog("close");
+                            } catch (e) {
+                                showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+                            }
+                        }
+                    },
+                    {
+                        id: "back-msg-cancel",
+                        text: "取消",
+                        "class": "btn btn-xs",
+                        click: function () {
+                            $(this).dialog("close");
+                        }
+                    }
+                ]
+            });
+        } catch (e) {
+            showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                    generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+        }
+    }
+    
     function createOperateMsgForm(msg) {
         var tips = msg;
         var form = '<form style="width: 100%; background-color: white"> ';
@@ -1166,6 +1238,17 @@
         form += '<label>加签给：</label>';
         form += $.parseStr('<input class="form-control" id="rtx_id" placeholder="%s">', "请输入rtx_id, 不能为空");
         form += '</div>';
+        form += '<div class="space-4"></div>';
+        form += '<div>';
+        form += $.parseStr('<textarea class="form-control" name="msg" style="height: 100px;" placeholder="%s"></textarea>', tips);
+        form += '</div>';
+        form += '</form>';
+        return form;
+    }
+    
+    function createBackMsgForm(msg) {
+        var tips = msg;
+        var form = '<form style="width: 100%; background-color: white"> ';
         form += '<div class="space-4"></div>';
         form += '<div>';
         form += $.parseStr('<textarea class="form-control" name="msg" style="height: 100px;" placeholder="%s"></textarea>', tips);
