--- a/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/approve_todo.vm
@@ -15,7 +15,7 @@
 </style>
 <div class="row">
     <div class="col-xs-12">
-        <div class="col-xs-5">
+        <div id="upTag" class="col-xs-5">
             <div class="form-group dash-button-group" style="margin-bottom: 0px; float: left;">
                 <button id="approve_pass"
                         style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
@@ -32,8 +32,16 @@
                         class="btn btn-minier btn-primary">
                     加签
                 </button>
+                
+                <button id="approve_back"
+                        style="width: 60px; height:28px; font-size: 14px; margin: 0px 2px 4px; font-weight: bold"
+                        class="btn btn-minier btn-primary">
+                    退回
+                </button>
+                
             </div>
         </div>
+        
         <form action="oa/approve_todo_export" method="post">
         <div class="col-xs-7">
             <div class="form-group dash-button-group" style="margin-bottom: 0px; float: right;">
@@ -120,6 +128,20 @@
 </script>
 <script src="/oaengine/static/My97DatePicker/WdatePicker.js"></script>
 <script language=JavaScript>
+
+	var nowPeFinCheckFlag="$nowFlag";
+    	  if(nowPeFinCheckFlag=="true"){
+			 document.getElementById("approve_pass").style.display="";
+			 document.getElementById("approve_reject").style.display="none";
+			 document.getElementById("approve_other").style.display="none";
+			 document.getElementById("approve_back").style.display="none";
+       	 }else{
+        	 document.getElementById("approve_pass").style.display="";
+			 document.getElementById("approve_reject").style.display="";
+			 document.getElementById("approve_other").style.display="";
+			  document.getElementById("approve_back").style.display="none";
+        }
+
 
     jQuery(function ($) {
         window.edit_form = $("#edit-form").html();
@@ -247,7 +269,6 @@
             },
             "fnDrawCallback": function () {
                 if (!oTable) {
-                    return;
                 }
 
                 $("#search").unbind("click");
@@ -274,17 +295,16 @@
                 }).on("dblclick", function (e) {
                     e.preventDefault();
                 });
-
-                $("#approve_back").unbind("click");
-                $("#approve_back").on("click", function (e) {
-                    approveBack(oTable);
-                }).on("dblclick", function (e) {
-                    e.preventDefault();
-                });
-
+					
                 $("#approve_other").unbind("click");
                 $("#approve_other").on("click", function (e) {
                     approveEndorse(oTable);
+                }).on("dblclick", function (e) {
+                    e.preventDefault();
+                });
+                $("#approve_back").unbind("click");
+                $("#approve_back").on("click", function (e) {
+                    approveBack(oTable);
                 }).on("dblclick", function (e) {
                     e.preventDefault();
                 });
@@ -692,7 +712,18 @@
         form += '</form>';
         return form;
     }
-
+	//退回
+	function createBackMsgForm(msg) {
+        var tips = msg;
+        var form = '<form style="width: 100%; background-color: white"> ';
+        form += '<div class="space-4"></div>';
+        form += '<div>';
+     	form += $.parseStr('<div id="mySelect" style="font-size:16px"></div>', tips);
+        form += $.parseStr('<textarea class="form-control" name="msg" style="height: 100px;" placeholder="%s"></textarea>', tips);
+        form += '</div>';
+        form += '</form>';
+        return form;
+    }
 
     function enableAccountApplicationDialogButton(enable) {
         /*if (enable) {
@@ -707,6 +738,8 @@
     function showTableInfo(data, len) {
         var aaData = [];
         var needData = data.tableInfos;
+      
+      
         var d_len = needData.length;
         for (var i = 0; i < d_len; i++) {
             var checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace"> <span class="lbl"></span></label>';
@@ -723,7 +756,7 @@
             }else if(needData[i][6] == 'true' && needData[i][9] == 'fin_check'){
             	map = $.parseStr("<a href='javascript:void(0);' " +
             	"onclick='edit(%s, %s);'><i class='icon-link'></i></a>", needData[i][0], needData[i][5]);
-            	checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace" disabled> <span class="lbl"></span></label>';
+            	checkbox = '<label><input value="'+needData[i][5]+'" type="checkbox" class="ace" > <span class="lbl"></span></label>';
             }
             var need_list = [checkbox, needData[i][0], money.toFixed(2), needData[i][1], needData[i][3], needData[i][10], map];
             var d_list = [];
@@ -766,7 +799,7 @@
                 if (resp.errorCode == "0") {
                     if (resp.data.length != 0) {
                         try {
-                            var details = resp.data;
+                           var details = resp.data;
                             var html = '';
                             html += __generateDetailHtml('当前审批状态', 'icon-eye-open', ["审批过程中"], true);
                             html += __generateDetailHtml('审批历史', 'icon-book', details, true);
@@ -853,4 +886,100 @@
 	    });
 	
 	}
+	
+	function approveBack(oTable) {
+		
+		showCommonNoticeDialog('回退信息', 'icon-warning-sign',
+                                                    generateNoticeMsg('正在开发中。。。。'), 300);
+        return;
+        if($("input:checked", oTable.fnGetNodes()).size()==0){
+    		showApproveResultDialog('审批', 'icon-lightbulb',
+                    generateNoticeMsg('请选择要审批的条目!'), 300);
+            return;
+    	}
+        
+        var url = "oa/approve_back";
+        var dialog_width = Math.min(Math.round(window.screen.width * 0.7), 900);
+        try {
+            $("#endorse-msg-dialog").empty();
+            $("#endorse-msg-dialog").append(createBackMsgForm('Tips: 退回原因请不要超过100个字符'));
+            var mySelect = document.getElementById("mySelect");
+            
+            var backMemberArray="$backMemberArray";
+            backMemberArray=backMemberArray.replace("[","").replace("]","").replace(" ","");
+            var arr=backMemberArray.split(","); 
+	        for (i=0;i<arr.length ;i++ ){
+	        	document.getElementById("mySelect").value=arr[i];
+				//var opp = new Option(arr[i],arr[i]);
+				//mySelect.add(opp);
+		    } 
+            var dialog = $("#endorse-msg-dialog").removeClass('hide').dialog({
+                modal: true,
+                width: dialog_width,
+                height: 300,
+                title: '<div style="color: DodgerBlue; padding: 4px; height: 28px; font-size: 14px; font-weight: bold"><li class="icon-user"></li> 回退理由</div>',
+                title_html: true,
+                closeOnEscape: false,
+                open: function (event, ui) {
+                    $(".ui-dialog-titlebar-close").hide();
+                },
+                buttons: [
+                    {
+                        id: "back-msg-submit",
+                        text: "提交",
+                        "class": "btn btn-primary btn-xs",
+                        click: function (e) {
+                            var Me = this;
+                            try {
+                                var this_form = $("#endorse-msg-dialog").find("form");
+                                var postData = this_form.serializeArray();
+                                var msg = "";
+                                
+                                 if( $("#mySelect").val() == '-----请选择-----'){
+                                	showCommonNoticeDialog('回退错误', 'icon-warning-sign',
+                                                    generateNoticeMsg('回退对象不能为空'), 300);
+                                    return;
+                                }
+                                
+                                for (var i in postData) {
+                                    if (postData[i]['name'] == 'msg') {
+                                        if (postData[i]['value'].length >= 100) {
+                                            showCommonNoticeDialog('回退错误', 'icon-warning-sign',
+                                                    generateNoticeMsg('回退理由不能超过100个字符'), 300);
+                                            return;
+                                        } else if (postData[i]['value'].length == 0) {
+                                            showCommonNoticeDialog('回退错误', 'icon-warning-sign',
+                                                    generateNoticeMsg('回退理由不能为空'), 300);
+                                            return;
+                                        } else {
+                                            msg = postData[i]['value'];
+                                            break;
+                                        }
+                                    }
+                                }
+                                approveProxy(url, msg, "回退",$("#mySelect").val());
+                                e.preventDefault(); //STOP default action
+                                $(this).dialog("close");
+                            } catch (e) {
+                                showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                                        generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+                            }
+                        }
+                    },
+                    {
+                        id: "back-msg-cancel",
+                        text: "取消",
+                        "class": "btn btn-xs",
+                        click: function () {
+                            $(this).dialog("close");
+                        }
+                    }
+                ]
+            });
+        } catch (e) {
+            showCommonNoticeDialog('网络错误', 'icon-warning-sign',
+                    generateNoticeMsg('网络错误，请刷新后重试!'), 300);
+        }
+    }
+	
 </script>
