禁止提交0费用 部门总监审批人不能是自己

--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -963,6 +963,11 @@
 			cell.value = "";
 			return false;
 		}
+		if(cell.value==0){
+			alert(field + "不能为0");
+			cell.value = "";
+			return false;
+		}
     }
     
     function createOperateMsgForm(msg) {
