增加出纳自动审批 总监vp接口更换 hrbp组改进 bug修复等等

--- a/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply_ratify.vm
@@ -915,7 +915,7 @@
                                         }
                                     }
                                 }
-                                approveProxy(url, msg, "审批通过");
+                                approveProxy(url, msg, "通过");
                                 e.preventDefault(); //STOP default action
                                 $(this).dialog("close");
                             } catch (e) {
