--- a/src/main/webapp/WEB-INF/vm/oa/apply.vm
+++ b/src/main/webapp/WEB-INF/vm/oa/apply.vm
@@ -424,7 +424,7 @@
     });
 
     function showTime() {
-        WdatePicker({dateFmt: 'yyyy-MM-dd'});
+        WdatePicker({dateFmt: 'yyyy-MM-dd', maxDate: '%y-%M-%d'});
     }
 
     function showTimeAndLabor(tableId, curRow) {
